src/App.css
body {
	--main-bg-color: rgb(239, 238, 232);
	--main-text-color: (65, 45, 43);
	--main-accent: rgb(189, 95, 98);

	background: var(--main-bg-color);
}

a {
	text-decoration: none;
}

.header {
	display: flex;
	justify-content: space-between;
}

.title {
	font-family: serif;
	font-size: 30px;
	color: var(--main-text-color);
}

.open-book-img {
	height: 50px;
	margin-right: 7px;
}

a.title:hover {
	color: var(--main-accent);
}

.auth-btn {
	margin: 0 5px;
	border-radius: 3px;
	border: 1px solid black;
	padding: 5px;
}

/* Sign-up Button */
.signup-btn {
	background: none;
}

.signup-btn:hover {
	background: black;
}

.signup-btn a {
	color: black;
}

.signup-btn:hover a {
	color: var(--main-bg-color);
}

/* Sign-in Button */
.signin-btn {
	background: black;
}

.signin-btn:hover {
	filter: brightness(90%);
}

.signin-btn a {
	color: var(--main-bg-color);
}

.user-info {
	margin: 0 5px;
}

.content {
	/* margin: 5vh 20vw; */
	margin-top: 5vh;
	margin-left: auto;
	margin-right: auto;
	width: 900px;
}

/* Colours */
.colour-1 {
	color: #08202C;
}

.colour-2 {
	color: #0B4258;
}

.colour-3 {
	color: #6FB9D7;
}

.colour-4 {
	color: #E2D5C7;
}

.colour-5 {
	color: #E2EAE3;
}

.bg-colour-1 {
	background-color: #08202C;
}

.bg-colour-2 {
	background-color: #0B4258;
}

.bg-colour-3 {
	background-color: #6FB9D7;
}

.bg-colour-4 {
	background-color: #E2D5C7;
}

.bg-colour-5 {
	background-color: #E2EAE3;
}

.clickable {
	cursor: pointer;
}

